--- a/WOTS/Base.lproj/Main.storyboard
+++ b/WOTS/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
         <!--Item 1-->
         <scene sceneID="8MQ-Ou-8vp">
             <objects>
-                <viewController id="TBO-H3-cLm" sceneMemberID="viewController">
+                <viewController id="TBO-H3-cLm" customClass="NoteCardViewController" customModule="WOTS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="pnO-la-eya"/>
                         <viewControllerLayoutGuide type="bottom" id="sM7-Mu-v9F"/>
@@ -40,8 +40,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Sh-W8-J4f" customClass="CustomNoteCardView" customModule="WOTS" customModuleProvider="target">
-                                <rect key="frame" x="16" y="78" width="240" height="128"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Sh-W8-J4f" customClass="KolodaView" customModule="Koloda">
+                                <rect key="frame" x="16" y="77" width="343" height="227"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -49,10 +49,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="4Am-Rz-Vh2"/>
+                    <connections>
+                        <outlet property="kolodaView" destination="6Sh-W8-J4f" id="adT-MS-Z6Y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a7g-rA-h6k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1090" y="-96"/>
+            <point key="canvasLocation" x="1088.8" y="-96.7016491754123"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="4PB-Yb-Yqr">
