--- a/WOTS/Base.lproj/Main.storyboard
+++ b/WOTS/Base.lproj/Main.storyboard
@@ -64,59 +64,7 @@
             </objects>
             <point key="canvasLocation" x="2028" y="-96.7016491754123"/>
         </scene>
-        <!--Word List View Controller-->
-        <scene sceneID="Yaa-lY-Biy">
-            <objects>
-                <viewController storyboardIdentifier="WordListViewController" id="ske-dl-0eD" customClass="WordListViewController" customModule="WOTS" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="HKd-TY-aeF"/>
-                        <viewControllerLayoutGuide type="bottom" id="YZK-Jg-ZIL"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="j9A-44-Wqh">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="u8R-0V-AcV">
-                                <rect key="frame" x="0.0" y="28" width="375" height="639"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="JdS-Vx-NgI">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JdS-Vx-NgI" id="spQ-K1-c2x">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jPT-3M-r0I">
-                                                    <rect key="frame" x="65" y="14" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="ske-dl-0eD" id="L5u-Hh-dom"/>
-                                    <outlet property="delegate" destination="ske-dl-0eD" id="rf5-ae-O9A"/>
-                                </connections>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="MHf-A6-Vi8"/>
-                    <connections>
-                        <outlet property="tableView" destination="u8R-0V-AcV" id="Rj8-ep-vyN"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MMG-s8-p7C" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2848.8000000000002" y="-97.601199400299862"/>
-        </scene>
-        <!--Word List Table View Controller-->
+        <!--Word List-->
         <scene sceneID="BBg-va-TI8">
             <objects>
                 <tableViewController id="T3g-1L-oL1" customClass="WordListTableViewController" customModule="WOTS" customModuleProvider="target" sceneMemberID="viewController">
@@ -139,13 +87,41 @@
                             <outlet property="delegate" destination="T3g-1L-oL1" id="eA4-ne-jk3"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Word List" id="WB4-GE-LCz"/>
                     <connections>
                         <outlet property="tableView" destination="AgS-zL-8bY" id="fec-HM-hgB"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r8k-CO-FnC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3577" y="-97"/>
+            <point key="canvasLocation" x="4180" y="-146.17691154422789"/>
+        </scene>
+        <!--Word List View Controller-->
+        <scene sceneID="nrp-x7-3KR">
+            <objects>
+                <viewController id="oas-hx-uLd" customClass="WordListViewController" customModule="WOTS" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mPi-P6-Rue"/>
+                        <viewControllerLayoutGuide type="bottom" id="VJN-gN-PCu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zwW-2N-lB0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Word List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QiW-Gz-kdl">
+                                <rect key="frame" x="134" y="20" width="107" height="55"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sOJ-7L-JTg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4864.8000000000002" y="-222.63868065967017"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="4PB-Yb-Yqr">
@@ -183,6 +159,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eQd-Rb-3DA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1088.8" y="-96.7016491754123"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="AvQ-cM-GnI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nfv-qe-f9z" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fdZ-ea-QtO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="T3g-1L-oL1" kind="relationship" relationship="rootViewController" id="yyt-RT-tg0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bs2-cU-O9I" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3240.8000000000002" y="-146.17691154422789"/>
         </scene>
     </scenes>
     <resources>
